refactor : get(0) -> getFirst()