@@ -32,8 +32,8 @@ class LawOfDemeterRuleTest {
         CompilationUnit ast = StaticJavaParser.parse(code);
         List<Violation> violations = rule.check(TEST_FILE, ast);
         assertThat(violations).hasSize(1);
-        assertThat(violations.get(0).line()).isEqualTo(3);
-        assertThat(violations.get(0).ruleId()).isEqualTo("LawOfDemeter");
+        assertThat(violations.getFirst().line()).isEqualTo(3);
+        assertThat(violations.getFirst().ruleId()).isEqualTo("LawOfDemeter");
     }
 
     @Test
@@ -51,7 +51,7 @@ class LawOfDemeterRuleTest {
         CompilationUnit ast = StaticJavaParser.parse(code);
         List<Violation> violations = rule.check(TEST_FILE, ast);
         assertThat(violations).hasSize(1);
-        assertThat(violations.get(0).line()).isEqualTo(4);
+        assertThat(violations.getFirst().line()).isEqualTo(4);
     }
 
     @Test
